src/emails/templates/style.css
h1,h2,h3,h4,h5,h6{
  display:block;
  margin:0;
  padding:0;
}

.transaction {
  border-bottom: 1px #d6d8da solid;
  padding: 8px 0;
  line-height: 1.5;
  letter-spacing: 0.5px;
}

.transaction:last-child {
  border-bottom: 0;
}

/* header */
.header__desc {
  white-space: nowrap;
  text-align: right;
}
.header__desc__title {
  color: #32363f;
  font-weight: bold;
  font-size: 16px;
  margin-bottom: 4px;
  letter-spacing: 0.5px;
}
.header__desc__subtitle {
  color: #95999d;
  font-size: 14px;
  letter-spacing: 0.4px;
}

.account h3 {
  font-size: 12px;
  font-weight: bold;
  color: #95999d;
  text-transform: uppercase;
  letter-spacing: 0.6px;
}
.account h4 {
  font-size: 12px;
  font-weight: normal;
  color: #95999d;
  text-transform: uppercase;
  letter-spacing: 0.6px;
}
/* amount */
.amount {
  white-space: nowrap;
  font-size: 16px;
}
.amount--pos {
  color: #35ce68;
}
.amount--neg {
  color: #f52d2d;
}
/* footer */
.footer__settings > td > div,
.footer__help > td > div {
  font-size: 12px;
  letter-spacing: 0.6px;
}

.footer__settings > td > div  {
  color: #32363f !important;
}
.footer__help > td > div {
  color: #95999d !important;
  text-align: right !important;
}
/* text */
.txt--right {
  text-align: right;
}

/* media */
table {
  border-spacing: 0;
}

